--- a/Logo.html
+++ b/Logo.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AccessGate</title>
+    <title>Logo AccessGate</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href='Images/Favicon.png'>
-    <link rel="stylesheet" href="modal.css"> </head>
+</head>
 <body>
     <div class="navbar">
         <img src="Images/Favicon.png">
@@ -15,28 +15,17 @@
             <div class="button"><li><a href="./Analisis.html">Analisis de mercado</a></li></div>
             <div class="button"><li><a href="./Logo.html">Nuestro logo</a></li></div>
             <div class="button"><li id="gestion-button"><a href="">Pagina de gestion de portones</a></li></div> </ul>
+        </ul>
     </div>
     <div class="parallax">
         <div class="content">
-            <img src="Images/Favicon.png"><br>
-            <div class="card">
-                <p class="card-title">
-                    Nos complace ofrecerte una solución eficiente y segura para controlar el acceso a tu empresa.
-                </p>
-            </div>
-            <div class="card">
-                <p class="card-title">
-                    Con nuestro sistema automatizado basado en tecnología RFID, podrás gestionar el acceso de manera ágil, garantizando la seguridad de tus instalaciones y el seguimiento detallado de entradas y salidas.
-                </p>
-            </div>
-            <div class="card">
-                <p class="card-title">
-                A través de nuestra plataforma, tendrás acceso a todos los registros en tiempo real, optimizando la gestión de tu equipo y proporcionando una experiencia sin complicaciones.
-                </p>
+            <h1>Nuestro Logo</h1><br>
+            <img src="./Images/Favicon.png">
+            <div class="market-analysis-sections">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero quisquam placeat illo quidem, nisi labore error deserunt assumenda repellendus molestiae blanditiis delectus, beatae perspiciatis, animi dignissimos velit? Architecto, saepe debitis.
             </div>
         </div>
     </div>
-
     <div id="modal-confirmacion" class="modal">
         <div class="modal-content">
             <span class="close-button">&times;</span>
@@ -50,5 +39,5 @@
     </div>
 
     <script src="script.js"></script> 
-    </body>
+</body>
 </html>
