--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <h1>¿Estás seguro?</h1> 
             <p>Te diriges a la pagina para administrar los portones AccessGate.</p>
             <div class="modal-buttons">
-                <button id="confirmar-button">Sí, estoy seguro</button>
-                <button id="cancelar-button">Cancelar</button>
+                <button id="confirmar-button">Sí, estoy seguro.</button>
+                <button id="cancelar-button">Cancelar.</button>
             </div>
         </div>
     </div>
