Feat: algunas cosas

--- a/Analisis.html
+++ b/Analisis.html
@@ -14,14 +14,36 @@
             <div class="button"><li><a href="./index.html">Inicio</a></li></div>
             <div class="button"><li><a href="./Analisis.html">Analisis de mercado</a></li></div>
             <div class="button"><li><a href="./Logo.html">Nuestro logo</a></li></div>
-            <div class="button"><li id="gestion-button"><a href="">Pagina de gestion de portones</a></li></div> </ul>
+            <div class="button"><li id="gestion-button"><a href="">Pagina Oficial</a></li></div> </ul>
         </ul>
     </div>
     <div class="parallax">
         <div class="content">
             <h1>Analisis de mercado</h1>
-            <div class="market-analysis-sections">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae veniam itaque ad iste eum at ex ut, cupiditate pariatur quos accusamus consectetur, inventore reprehenderit placeat molestias nesciunt omnis voluptates rerum!
+            <div>
+                Hicimos una encuesta para saber que opinaba la gente sobre accessgate. Puedes ver la encuesta haciendo click <a class="link" href="https://docs.google.com/forms/d/e/1FAIpQLScNORMog0TXZdwDIJ3XAy07fLKQ-AqETWIrLbxfSbyBqXPwfA/viewform?usp=dialog">aquí</a>. 
+                <img class="img" src="Images/Encuesta.png" alt="Encuesta">
+                <h2>Conclusión</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque doloribus magni porro dolores molestias incidunt quas exercitationem illum ipsa nulla. Dignissimos odio veniam aliquid ex error corrupti, cumque earum laudantium.</p>
+                <h1>Graficas</h1>
+                <h2>Preguntas sobre los encuestados</h2>
+                <h3>Edad</h3>
+                <img class="img" src="Images/Edades.png" alt="Edades">
+                <h3>Genero</h3>
+                <img class="img" src="Images/Genero.png" alt="Genero">
+                <h3>¿A que te dedicas?</h3>
+                <img class="img" src="Images/Trabajo.png" alt="¿A que te dedicas?">
+                <h3>¿La empresa/organización/institución a la que asistes cuenta con un portón?</h3>
+                <img class="img" src="Images/Porton.png" alt="¿La empresa/organización/institución a la que asistes cuenta con un portón?">
+                <h2>Preguntas sobre Accessgate</h2>
+                <h3>Opinion sobre el producto</h3>
+                <img class="img" src="Images/Opinion.png" alt="Opinion">
+                <h3>Precio</h3>
+                <img class="img" src="Images/Coste.png" alt="Precio">
+                <h3>Productos similares</h3>
+                <img class="img" src="Images/Similar.png" alt="Producto Similar">
+                <h3>¿Le gustaría que su empresa/organización/institución tenga un dispositivo AccessGate?</h3>
+                <img class="img" src="Images/Quieres.png" alt="¿Le gustaría que su empresa/organización/institución tenga un dispositivo AccessGate?">
             </div>
         </div>
     </div>
@@ -36,7 +58,9 @@
             </div>
         </div>
     </div>
-
+    <footer>
+        <p>&copy; 2025 AccessGate. Todos los derechos reservados.</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
