--- a/Logo.html
+++ b/Logo.html
@@ -14,15 +14,20 @@
             <div class="button"><li><a href="./index.html">Inicio</a></li></div>
             <div class="button"><li><a href="./Analisis.html">Analisis de mercado</a></li></div>
             <div class="button"><li><a href="./Logo.html">Nuestro logo</a></li></div>
-            <div class="button"><li id="gestion-button"><a href="">Pagina de gestion de portones</a></li></div> </ul>
+            <div class="button"><li id="gestion-button"><a href="">Pagina Oficial</a></li></div> </ul>
         </ul>
     </div>
     <div class="parallax">
         <div class="content">
             <h1>Nuestro Logo</h1><br>
             <img src="./Images/Favicon.png">
-            <div class="market-analysis-sections">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero quisquam placeat illo quidem, nisi labore error deserunt assumenda repellendus molestiae blanditiis delectus, beatae perspiciatis, animi dignissimos velit? Architecto, saepe debitis.
+            <div>
+                <h4>
+                    En AccessGate, hemos diseñado nuestro logo para reflejar la esencia de nuestra empresa: seguridad, eficiencia y tecnología de vanguardia.<br>
+                    La combinación de las letras "AG" en un diseño audaz y moderno simboliza nuestra marca, AccessGate. La línea horizontal subraya "AG", transmitiendo la idea de una base sólida y confiable, la infraestructura robusta que ofrecemos para sus sistemas de acceso.<br>
+                    La tipografía elegante y clara de "AccessGate" no solo refuerza nuestro nombre, sino que también proyecta la facilidad y la fluidez con la que nuestros sistemas de portones automatizados, potenciados por tecnología RFID, le brindarán un control de acceso sin igual.<br>
+                    Nuestro logo es más que una imagen; es una declaración de nuestro compromiso con la innovación y su tranquilidad. Representa la puerta de entrada a soluciones de acceso inteligentes y seguras, diseñadas específicamente para usted.<br>
+                </h4>
             </div>
         </div>
     </div>
@@ -37,7 +42,9 @@
             </div>
         </div>
     </div>
-
+    <footer>
+        <p>&copy; 2025 AccessGate. Todos los derechos reservados.</p>
+    </footer>
     <script src="script.js"></script> 
 </body>
 </html>
