--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="button"><li><a href="./index.html">Inicio</a></li></div>
             <div class="button"><li><a href="./Analisis.html">Analisis de mercado</a></li></div>
             <div class="button"><li><a href="./Logo.html">Nuestro logo</a></li></div>
-            <div class="button"><li id="gestion-button"><a href="">Pagina de gestion de portones</a></li></div> </ul>
+            <div class="button"><li id="gestion-button"><a href="">Pagina Oficial</a></li></div> </ul>
     </div>
     <div class="parallax">
         <div class="content">
@@ -34,6 +34,11 @@
                 A través de nuestra plataforma, tendrás acceso a todos los registros en tiempo real, optimizando la gestión de tu equipo y proporcionando una experiencia sin complicaciones.
                 </p>
             </div>
+            <div class="card">
+                <p class="card-title">
+                Aqui podras ver los estudios de mercado de Accessgate.
+                </p>
+            </div>
         </div>
     </div>
 
@@ -48,6 +53,9 @@
             </div>
         </div>
     </div>
+    <footer>
+        <p>&copy; 2025 AccessGate. Todos los derechos reservados.</p>
+    </footer>
 
     <script src="script.js"></script> 
     </body>
