Feat: decoracion en conclusion y logo

--- a/Logo.html
+++ b/Logo.html
@@ -21,7 +21,7 @@
         <div class="content">
             <h1>Nuestro Logo</h1><br>
             <img src="./Images/Favicon.png">
-            <div>
+            <div class="market-analysis-sections">
                 <h4>
                     En AccessGate, hemos diseñado nuestro logo para reflejar la esencia de nuestra empresa: seguridad, eficiencia y tecnología de vanguardia.<br>
                     La combinación de las letras "AG" en un diseño audaz y moderno simboliza nuestra marca, AccessGate. La línea horizontal subraya "AG", transmitiendo la idea de una base sólida y confiable, la infraestructura robusta que ofrecemos para sus sistemas de acceso.<br>
