Feat: tecnologias con modelos 3d

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div class="button"><li><a href="./index.html">Inicio</a></li></div>
             <div class="button"><li><a href="./Analisis.html">Analisis de mercado</a></li></div>
             <div class="button"><li><a href="./Logo.html">Nuestro logo</a></li></div>
+            <div class="button"><li><a href="./Tecnologias.html">Tecnologías</a></li></div>
             <div class="button"><li id="gestion-button"><a href="">Pagina Oficial</a></li></div> </ul>
     </div>
     <div class="parallax">
