Fix: Modal de pagina oficial

--- a/Analisis.html
+++ b/Analisis.html
@@ -61,7 +61,7 @@
         <div class="modal-content">
             <span class="close-button">&times;</span>
             <h1>¿Estás seguro?</h1>
-            <p>Te diriges a la pagina para administrar los portones AccessGate.</p>
+            <p>Te diriges a la pagina oficial de Accessgate.</p>
             <div class="modal-buttons">
                 <button id="confirmar-button">Sí, estoy seguro</button>
                 <button id="cancelar-button">Cancelar</button>
