Cambios en navbar

--- a/Analisis.html
+++ b/Analisis.html
@@ -10,13 +10,23 @@
 <body>
     <div class="navbar">
         <img src="Images/Favicon.png">
-        <ul class="nav-links">
+        <div class="nav-links">
             <div class="button"><li><a href="./index.html">Inicio</a></li></div>
             <div class="button"><li><a href="./Analisis.html">Analisis de mercado</a></li></div>
             <div class="button"><li><a href="./Logo.html">Nuestro logo</a></li></div>
             <div class="button"><li><a href="./Tecnologias.html">Tecnologías</a></li></div>
-            <div class="button"><li id="gestion-button"><a href="">Pagina Oficial</a></li></div> </ul>
-        </ul>
+            <div class="button"><li id="gestion-button"><a href="">Pagina Oficial</a></li></div>
+        </div>
+        <div class="dropdown-menu-toggle">
+            <button class="menu-button">☰</button>
+            <div class="dropdown-content">
+                <a href="./index.html">Inicio</a>
+                <a href="./Analisis.html">Analisis de mercado</a>
+                <a href="./Logo.html">Nuestro logo</a>
+                <a href="./Tecnologias.html">Tecnologías</a>
+                <a href="https://accessgate.onrender.com/">Pagina Oficial</a>
+            </div>
+        </div>
     </div>
     <div class="parallax">
         <div class="content">
