--- a/Logo.html
+++ b/Logo.html
@@ -10,18 +10,28 @@
 <body>
     <div class="navbar">
         <img src="Images/Favicon.png">
-        <ul class="nav-links">
+        <div class="nav-links">
             <div class="button"><li><a href="./index.html">Inicio</a></li></div>
             <div class="button"><li><a href="./Analisis.html">Analisis de mercado</a></li></div>
             <div class="button"><li><a href="./Logo.html">Nuestro logo</a></li></div>
             <div class="button"><li><a href="./Tecnologias.html">Tecnologías</a></li></div>
-            <div class="button"><li id="gestion-button"><a href="">Pagina Oficial</a></li></div> </ul>
-        </ul>
+            <div class="button"><li id="gestion-button"><a href="">Pagina Oficial</a></li></div>
+        </div>
+        <div class="dropdown-menu-toggle">
+            <button class="menu-button">☰</button>
+            <div class="dropdown-content">
+                <a href="./index.html">Inicio</a>
+                <a href="./Analisis.html">Analisis de mercado</a>
+                <a href="./Logo.html">Nuestro logo</a>
+                <a href="./Tecnologias.html">Tecnologías</a>
+                <a href="https://accessgate.onrender.com/">Pagina Oficial</a>
+            </div>
+        </div>
     </div>
     <div class="parallax">
         <div class="content">
             <h1>Nuestro Logo</h1><br>
-            <img src="./Images/Favicon.png">
+            <img src="./Images/Favicon.png" class="logo">
             <div class="market-analysis-sections">
                 <h4>
                     En AccessGate, hemos diseñado nuestro logo para reflejar la esencia de nuestra empresa: seguridad, eficiencia y tecnología de vanguardia.<br>
