--- a/Tecnologias.html
+++ b/Tecnologias.html
@@ -10,12 +10,23 @@
 <body>
     <div class="navbar">
         <img src="Images/Favicon.png">
-        <ul class="nav-links">
+        <div class="nav-links">
             <div class="button"><li><a href="./index.html">Inicio</a></li></div>
             <div class="button"><li><a href="./Analisis.html">Analisis de mercado</a></li></div>
             <div class="button"><li><a href="./Logo.html">Nuestro logo</a></li></div>
             <div class="button"><li><a href="./Tecnologias.html">Tecnologías</a></li></div>
-            <div class="button"><li id="gestion-button"><a href="">Pagina Oficial</a></li></div> </ul>
+            <div class="button"><li id="gestion-button"><a href="">Pagina Oficial</a></li></div>
+        </div>
+        <div class="dropdown-menu-toggle">
+            <button class="menu-button">☰</button>
+            <div class="dropdown-content">
+                <a href="./index.html">Inicio</a>
+                <a href="./Analisis.html">Analisis de mercado</a>
+                <a href="./Logo.html">Nuestro logo</a>
+                <a href="./Tecnologias.html">Tecnologías</a>
+                <a href="https://accessgate.onrender.com/">Pagina Oficial</a>
+            </div>
+        </div>
     </div>
     <div class="parallax">
         <div class="content">
@@ -25,11 +36,11 @@
                 <div class="contenedor-flex">
                     <h2>Accessgate se basa en la tecnologia rfid, para la deteccion de los tags o tarjetas.</h2>
                 </div>
-                <div class="sketchfab-embed-wrapper"> <iframe class="tresd" title="RFID-RC522 (Arduino UNO Compatible)" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share width="300" height="300" src="https://sketchfab.com/models/16501915e98143e49930a755a87272b3/embed?autospin=1&autostart=1&preload=1&transparent=1&ui_hint=0&ui_theme=dark"> </iframe></div>
+                <div class="sketchfab-embed-wrapper"> <iframe class="tresd" title="RFID-RC522 (Arduino UNO Compatible)" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/16501915e98143e49930a755a87272b3/embed?autospin=1&autostart=1&preload=1&transparent=1&ui_hint=0&ui_theme=dark"> </iframe></div>
             </div>
             <h2>NodeMCU esp32</h2>
             <div class="tech">
-                <div class="sketchfab-embed-wrapper"> <iframe class="tresd" title="NodeMCU ESP32" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share width="300" height="300" src="https://sketchfab.com/models/a09ed2e58a4248ffb1ab5e6597754f18/embed?autospin=1&autostart=1&annotations_visible=0&preload=1&transparent=1&ui_hint=0"> </iframe> </div>
+                <div class="sketchfab-embed-wrapper"> <iframe class="tresd" title="NodeMCU ESP32" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/a09ed2e58a4248ffb1ab5e6597754f18/embed?autospin=1&autostart=1&annotations_visible=0&preload=1&transparent=1&ui_hint=0"> </iframe> </div>
                 <div class="contenedor-flex">
                     <h2>Microcontrolador con tecnologia wifi para recibir y enviar los datos.</h2>
                 </div>
@@ -39,7 +50,7 @@
                 <div class="contenedor-flex">
                     <h2>Para detectar si hay algo en la trayectoria del portón.</h2>
                 </div>
-                <div class="sketchfab-embed-wrapper"> <iframe title="Ultrasonic sensor" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share width="300" height="300" src="https://sketchfab.com/models/d588d4e5b6424addbd5a772691af9f52/embed?autospin=1&autostart=1&preload=1&transparent=1&ui_hint=0"> </iframe> </div>
+                <div class="sketchfab-embed-wrapper"> <iframe title="Ultrasonic sensor" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share  src="https://sketchfab.com/models/d588d4e5b6424addbd5a772691af9f52/embed?autospin=1&autostart=1&preload=1&transparent=1&ui_hint=0"> </iframe> </div>
             </div>
         </div>  
     </div>
