--- a/Tecnologias.html
+++ b/Tecnologias.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tecnologias</title>
+    <title>Tecnologías</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href='Images/Favicon.png'>
 </head>
@@ -12,40 +12,40 @@
         <img src="Images/Favicon.png">
         <div class="nav-links">
             <div class="button"><li><a href="./index.html">Inicio</a></li></div>
-            <div class="button"><li><a href="./Analisis.html">Analisis de mercado</a></li></div>
+            <div class="button"><li><a href="./Analisis.html">Análisis</a></li></div>
             <div class="button"><li><a href="./Logo.html">Nuestro logo</a></li></div>
             <div class="button"><li><a href="./Tecnologias.html">Tecnologías</a></li></div>
-            <div class="button"><li id="gestion-button"><a href="">Pagina Oficial</a></li></div>
+            <div class="button"><li id="gestion-button"><a href="">Página Oficial</a></li></div>
         </div>
         <div class="dropdown-menu-toggle">
             <button class="menu-button">☰</button>
             <div class="dropdown-content">
                 <a href="./index.html">Inicio</a>
-                <a href="./Analisis.html">Analisis de mercado</a>
+                <a href="./Analisis.html">Análisis</a>
                 <a href="./Logo.html">Nuestro logo</a>
                 <a href="./Tecnologias.html">Tecnologías</a>
-                <a href="https://accessgate.onrender.com/">Pagina Oficial</a>
+                <a href="https://accessgate.onrender.com/">Página Oficial</a>
             </div>
         </div>
     </div>
     <div class="parallax">
         <div class="content">
-            <h1>Tecnologías que se estan usando</h1>
+            <h1>Tecnologías que se están usando</h1>
             <h2>RFID</h2>
             <div class="tech">
                 <div class="contenedor-flex">
-                    <h2>Accessgate se basa en la tecnologia rfid, para la deteccion de los tags o tarjetas.</h2>
+                    <h2>AccessGate se basa en la tecnología RFID, para la detección de los tags o tarjetas.</h2>
                 </div>
                 <div class="sketchfab-embed-wrapper"> <iframe class="tresd" title="RFID-RC522 (Arduino UNO Compatible)" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/16501915e98143e49930a755a87272b3/embed?autospin=1&autostart=1&preload=1&transparent=1&ui_hint=0&ui_theme=dark"> </iframe></div>
             </div>
-            <h2>NodeMCU esp32</h2>
+            <h2>NodeMCU ESP32</h2>
             <div class="tech">
                 <div class="sketchfab-embed-wrapper"> <iframe class="tresd" title="NodeMCU ESP32" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/a09ed2e58a4248ffb1ab5e6597754f18/embed?autospin=1&autostart=1&annotations_visible=0&preload=1&transparent=1&ui_hint=0"> </iframe> </div>
                 <div class="contenedor-flex">
-                    <h2>Microcontrolador con tecnologia wifi para recibir y enviar los datos.</h2>
+                    <h2>Microcontrolador con tecnología wifi para recibir y enviar los datos.</h2>
                 </div>
             </div>
-            <h2>Sensor Ultrasonico</h2>
+            <h2>Sensor Ultrasónico</h2>
             <div class="tech">
                 <div class="contenedor-flex">
                     <h2>Para detectar si hay algo en la trayectoria del portón.</h2>
@@ -58,7 +58,7 @@
         <div class="modal-content">
             <span class="close-button">&times;</span>
             <h1>¿Estás seguro?</h1> 
-            <p>Te diriges a la pagina oficial de Accessgate.</p>
+            <p>Te diriges a la página oficial de AccessGate.</p>
             <div class="modal-buttons">
                 <button id="confirmar-button">Sí, estoy seguro.</button>
                 <button id="cancelar-button">Cancelar.</button>
