--- a/Logo.html
+++ b/Logo.html
@@ -12,19 +12,19 @@
         <img src="Images/Favicon.png">
         <div class="nav-links">
             <div class="button"><li><a href="./index.html">Inicio</a></li></div>
-            <div class="button"><li><a href="./Analisis.html">Analisis de mercado</a></li></div>
+            <div class="button"><li><a href="./Analisis.html">Análisis</a></li></div>
             <div class="button"><li><a href="./Logo.html">Nuestro logo</a></li></div>
             <div class="button"><li><a href="./Tecnologias.html">Tecnologías</a></li></div>
-            <div class="button"><li id="gestion-button"><a href="">Pagina Oficial</a></li></div>
+            <div class="button"><li id="gestion-button"><a href="">Página Oficial</a></li></div>
         </div>
         <div class="dropdown-menu-toggle">
             <button class="menu-button">☰</button>
             <div class="dropdown-content">
                 <a href="./index.html">Inicio</a>
-                <a href="./Analisis.html">Analisis de mercado</a>
+                <a href="./Analisis.html">Análisis</a>
                 <a href="./Logo.html">Nuestro logo</a>
                 <a href="./Tecnologias.html">Tecnologías</a>
-                <a href="https://accessgate.onrender.com/">Pagina Oficial</a>
+                <a href="https://accessgate.onrender.com/">Página Oficial</a>
             </div>
         </div>
     </div>
@@ -46,10 +46,10 @@
         <div class="modal-content">
             <span class="close-button">&times;</span>
             <h1>¿Estás seguro?</h1> 
-            <p>Te diriges a la pagina oficial de Accessgate.</p>
+            <p>Te diriges a la página oficial de Accessgate.</p>
             <div class="modal-buttons">
-                <button id="confirmar-button">Sí, estoy seguro</button>
-                <button id="cancelar-button">Cancelar</button>
+                <button id="confirmar-button">Sí, estoy seguro.</button>
+                <button id="cancelar-button">Cancelar.</button>
             </div>
         </div>
     </div>
