--- a/Analisis/Competencia.html
+++ b/Analisis/Competencia.html
@@ -31,7 +31,7 @@
     <div class="parallax">
         <div class="content">
             <h1>Análisis de la competencia</h1>
-            <p>Hicimos un analisis de la competencia para ver a que nos enfrentamos</p>
+            <p>Hicimos un análisis de la competencia para ver a qué nos enfrentamos.</p>
         </div>
     </div>
     <div id="modal-confirmacion" class="modal">
