Mejoras visules y tabla a medias

--- a/Analisis/Competencia.html
+++ b/Analisis/Competencia.html
@@ -32,6 +32,89 @@
         <div class="content">
             <h1>Análisis de la competencia</h1>
             <p>Hicimos un análisis de la competencia para ver a qué nos enfrentamos.</p>
+            <div class="table-container">
+        <table>
+            <thead>
+                <tr>
+                    <th>Analisis</th>
+                    <th>AccessGate</th>
+                    <th>Salto Systems</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Localización</td>
+                    <td>Río Tercero-Cba</td>
+                    <td>España</td>
+                </tr>
+                <tr>
+                    <td>Productos y servicios que ofrecen</td>
+                    <td>Dispositivo AccessGate</td>
+                    <td>SALTO KS (Keys as a Service)</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Pagina web de accessgate</td>
+                    <td>SVN (Salto Virtual Network)</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td>Homelok</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td>XS4 Face: control de acceso por reconocimiento facial.</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td>XS4 Com: interfonía inteligente para edificios modernos</td>
+                </tr>
+                <tr>
+                    <td>Precio de venta</td>
+                    <td>USD 99</td>
+                    <td>Varían según el producto pero aproximadamente es de 500 USD por unidad.</td>
+                </tr>
+                <tr>
+                    <td>Medios de pago</td>
+                    <td>Paypal</td>
+                    <td>Ofrecen diversas opciones como transferencia bancaria, tarjetas de crédito y otros métodos electrónicos.</td>
+                </tr>
+                <tr>
+                    <td>Caracteristicas de la materia prima</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Tecnologias</td>
+                    <td>RFID</td>
+                    <td>Salto KS para el control de acceso basado en la nube.</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Wi-fi</td>
+                    <td>XS4-Face para reconocimiento facial.</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Pagina web para verificar accesos.</td>
+                    <td>XS4-Com para interfonía inteligente.</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td>Data-On-Card para gestión de identidades.</td>
+                </tr>
+                <tr>
+                    <td>Marca</td>
+                    <td>AccessGate</td>
+                    <td>SALTO</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
         </div>
     </div>
     <div id="modal-confirmacion" class="modal">
